maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: value &&! is not a member of Boolean
    if(nombre==1&&!estFaceMur()){
                ^